// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Vslider.vue should be focused when active 1`] = `

<div role="slider"
     tabindex="0"
     class="v-input-group v-input-group--focused v-input-group--dirty v-input-group--slider v-input-group--active"
>
  <div class="v-input-group__input">
    <div class="slider">
      <div class="slider__track__container">
        <div class="slider__track">
        </div>
        <div class="slider__track-fill primary">
        </div>
      </div>
      <div class="slider__thumb-container"
           style="left: 50%;"
      >
        <div class="slider__thumb primary">
        </div>
      </div>
    </div>
  </div>
  <div class="v-input-group__details">
  </div>
</div>

`;

exports[`Vslider.vue should match a snapshot 1`] = `

<div role="slider"
     tabindex="0"
     class="v-input-group v-input-group--slider"
>
  <div class="v-input-group__input">
    <div class="slider">
      <div class="slider__track__container">
        <div class="slider__track">
        </div>
        <div class="slider__track-fill primary">
        </div>
      </div>
      <div class="slider__thumb-container">
        <div class="slider__thumb">
        </div>
      </div>
    </div>
  </div>
  <div class="v-input-group__details">
  </div>
</div>

`;

exports[`Vslider.vue should render component with thumbLabel and match a snapshot 1`] = `

<div role="slider"
     tabindex="0"
     class="v-input-group v-input-group--slider"
>
  <div class="v-input-group__input">
    <div class="slider">
      <div class="slider__track__container">
        <div class="slider__track">
        </div>
        <div class="slider__track-fill primary">
        </div>
      </div>
      <div class="slider__thumb-container slider__thumb-container--label">
        <div class="slider__thumb">
        </div>
        <div class="slider__thumb--label__container"
             style="display: none;"
        >
          <div class="slider__thumb--label">
            <span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="v-input-group__details">
  </div>
</div>

`;

exports[`Vslider.vue should render component with ticks and match a snapshot 1`] = `

<div role="slider"
     tabindex="0"
     class="v-input-group v-input-group--slider v-input-group--ticks"
>
  <div class="v-input-group__input">
    <div class="slider">
      <div class="slider__track__container">
        <div class="slider__track">
        </div>
        <div class="slider__track-fill primary">
        </div>
      </div>
      <div class="slider__ticks-container">
        <span class="slider__tick"
              style="left: 0%;"
        >
        </span>
        <span class="slider__tick"
              style="left: 25%;"
        >
        </span>
        <span class="slider__tick"
              style="left: 50%;"
        >
        </span>
        <span class="slider__tick"
              style="left: 75%;"
        >
        </span>
        <span class="slider__tick"
              style="left: 100%;"
        >
        </span>
      </div>
      <div class="slider__thumb-container">
        <div class="slider__thumb">
        </div>
      </div>
    </div>
  </div>
  <div class="v-input-group__details">
  </div>
</div>

`;
